--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.16.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
